...
					style={{ marginTop: space[2] }}
				>
					<Button
						onPress={onPressGetStarted}
						disabled={!inputReady}
						accessibilityLabel={t("welcome.getStarted")}
						testID="welcome-get-started"
						fullWidth
						size="lg"
						iconRight={ArrowRight}
					>
						{t("welcome.getStarted")}
					</Button>
...
