...
          tabBarIcon: OrdersTabIcon,
        }}
      />
      <Tabs.Screen
        name="(profile)"
        options={{
          title: "My Profile",
          tabBarIcon: ProfileTabIcon,
        }}
      />
    </ProtectedTabsLayout>
  );
}
...
