...
						{config.secondary.label}
					</Button>
				)}
				<Button
					variant={config.primary.destructive ? "destructive" : "primary"}
					onPress={() => pop(true)}
					testID="dialog-confirm-primary"
				>
					{config.primary.label}
				</Button>
			</AlertDialog.Footer>
		</AlertDialog>
	);
...
